<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:layout_marginTop="100dp"


    android:elevation="4dp">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSystolicTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Systolic: "
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/systolic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="120 mmHg"
                android:textSize="18dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvHeartRateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Heart Rate: "
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Heart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="80 bpm"
                android:textSize="18dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/DiastolicTilte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Diastolic: "
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10/12/22"
                android:textSize="18dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/DateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Date: "
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="27/12/23" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"

            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonDetails"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#00BA000D"
                android:textColor="#fb6971"
                android:text="View Details"
                android:textSize="10dp" />

            <Button
                android:id="@+id/edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:backgroundTint="#fb6971"

                android:text="Edit"
                android:textSize="10dp" />

            <Button
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:backgroundTint="#ba000d"
                android:text="Delete"
                android:textSize="10dp" />


        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
